[package]
name = "benchmark-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10"
prost = "0.12"
thrift = "0.17"
rand = "0.8"
anyhow = "1.0"
rocksdb = "0.22"
toml = "0.8"
futures = "0.3"
async-trait = "0.1"
rocksdb_server = { path = "../rust" }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "benchmark"
path = "src/main.rs"