[package]
name = "rocksdb_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "rocksdb_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "thrift-server"
path = "src/thrift_main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
rocksdb = "0.21"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
thrift = "0.17"
ordered-float = "4.2"
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.10"
