[workspace]
members = [
    ".",
    "crates/benchmark",
    "crates/kv-storage-api",
    "crates/kv-storage-rocksdb",
    "crates/kv-storage-mockdb",
    "crates/consensus-api",
    "crates/consensus-mock"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
thrift = "0.17"
ordered-float = "4.2"
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
rand = "0.8"
anyhow = "1.0"
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
async-trait = "0.1"

[workspace.dependencies.tonic-build]
version = "0.10"

[workspace.package]
edition = "2021"

[package]
name = "rocksdb_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "rocksdb_server"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "server"
path = "src/servers/grpc_server.rs"

[[bin]]
name = "thrift-server"
path = "src/servers/thrift_server.rs"

[dependencies]
kv-storage-api = { path = "crates/kv-storage-api" }
kv-storage-rocksdb = { path = "crates/kv-storage-rocksdb" }
kv-storage-mockdb = { path = "crates/kv-storage-mockdb" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rocksdb = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
thrift = { workspace = true }
ordered-float = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = ["ffi"]
ffi = []

[profile.test]
# Run tests sequentially (no parallelism)
opt-level = 0
