[package]
name = "kvstore-client"
version = "0.1.0"
edition = "2021"
authors = ["KV Store Team"]
description = "High-performance client SDK for the transactional KV store with C FFI bindings"
license = "MIT"

[lib]
name = "kvstore_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]


[dependencies]
tokio = { version = "1.0", features = ["full"] }
thrift = "0.17"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = ["ffi"]
ffi = []

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"