[package]
name = "kvstore-client"
version = "0.1.0"
edition = "2021"
authors = ["KV Store Team"]
description = "High-performance client SDK for the transactional KV store with C FFI bindings"
license = "MIT"

[lib]
name = "kvstore_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]


[dependencies]
tokio = { workspace = true }
thrift = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

[features]
default = ["ffi"]
ffi = []

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"