[package]
name = "kv-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tonic = { workspace = true }
prost = { workspace = true }
thrift = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
rocksdb = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
rocksdb_server = { path = "../.." }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "benchmark"
path = "src/main.rs"