[package]
name = "consensus-mock"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[dependencies]
consensus-api = { path = "../consensus-api" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
bincode = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }