[package]
name = "consensus-rsml"
version = "0.1.0"
edition = "2021"
description = "RSML consensus implementation for KV store"
authors = ["KV Development Team"]

[dependencies]
consensus-api = { path = "../consensus-api" }
rsml = { path = "../../../third_party/RSML", optional = true }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
bincode = "1.3"

[features]
default = []
rsml = ["dep:rsml"]
tcp = ["rsml", "rsml/tcp_transport"]
wal = []
test-utils = ["rsml", "rsml/testing"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tracing-subscriber = "0.3"