[package]
name = "kv-storage-rocksdb"
version = "0.1.0"
edition = "2021"

[dependencies]
kv-storage-api = { path = "../kv-storage-api" }
rocksdb = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }